@@ -1,3 +1,12 @@
+2007-03-30  Andrew Haley  <aph@redhat.com>
+
+	* javax/management/ObjectName.java: Handle 0-length names.
+
+2007-03-27  Andrew Haley  <aph@redhat.com>
+
+	* javax/management/MBeanServerFactory.java: Use the domain that
+	we've been passed, not the fixed string "DefaultDomain".
+
 2007-03-29  Tom Tromey  <tromey@redhat.com>
 
 	PR libgcj/29869:
